# gbai_demo

./: .dockerignore  .env_example  .gitignore  CLAUDE.md  README.md  agent-v1.5-compose.yaml  agent-v1.5-deployment.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
data/ospa/: exp1.csv  exp3.csv
dockerfiles/: Dockerfile.agent_runtime  Dockerfile.playground
docs/: CHAPTER_STRUCTURE_SIMPLE.md  CONFIG_UPDATE_ALL_AGENTS.md
docs/ai_dev_log/: CHAPTER_STRUCTURE_MERMAID.md  CONFIG_UPDATE_ALL_AGENTS.md  agent_runtime_fsm_refactor.md  chat_service_architecture_refactor_2025-09-17.md  chat_service_error_fixes.md  chatml_message_format_integration.md  chatservice_agent_integration.md  chatv2_service_integration.md  feedback_api_guide.md  fsm_agent_refactor.md  select_actions_agent_refactor_and_token_counter_removal_2025-09-17.md  token_counter_fix_2025-09-18.md  tool_base_refactor.md  tool_structure_refactor.md  v2_core_data_structure_refactor.md  (+1 more)
exps/: chatv15_demo.py  demo_chat_api_with_image.py  demo_chat_examples.py  demo_feedback_with_openai.py  demo_token_counter.py  demo_token_counting_usage.py  exp_conversation_service.py  exp_openai_embedding_client.py  exp_weaviate_client.py  feedback_api_example.py  feedback_api_server.py  test_action_executor.py  test_api_server.py  test_chatservice_advanced.py  test_chatv15_service.py  test_consolidated_chat_service.py  test_create_new_state_integration.py  test_feedback_api.py  test_feedback_service.py  test_moved_token_counter.py  test_new_state_agent_refactor.py  test_openai_direct.py  test_select_actions_agent.py  test_select_state_integration.py  test_simple_chat.py  test_state_select_agent_refactor.py  test_state_select_empty_memory.py  test_token_counter_fix.py  test_token_counting.py  test_tool_refactor.py  test_v2_core_integration.py  test_v2_refactor.py
ospa/: exp1.csv  exp2.csv  exp3.csv
playground/: README.md  README_REFACTOR.md  agent_runtime_playground.py  api_services.py  app.py  main.py  ospa_models.py  ospa_utils.py
scripts/: convert_chapter_to_document_tree.py  convert_with_mermaid_root.py  generate_mermaid_structure.py
tests/: test_backward_service_optimized.py  test_conversation_service.py  test_entities.py  test_exp_case.py  test_neo4j_client.py  test_services.py  test_weaviate_client.py
(+127 files in other folders)
